(library
 (name trace_subscriber)
 (public_name trace.subscriber)
 (private_modules time_ thread_ tbl_)
 (libraries
  (re_export trace.core)
  (select
   thread_.ml
   from
   (threads -> thread_.real.ml)
   (-> thread_.dummy.ml))
  (select
   tbl_.ml
   from
   (picos_aux.htbl -> tbl_.picos.ml)
   (threads -> tbl_.thread.ml)
   (-> tbl_.basic.ml))
  (select
   time_.ml
   from
   (mtime mtime.clock.os -> time_.mtime.ml)
   (mtime mtime.clock.jsoo -> time_.mtime.ml)
   (unix -> time_.unix.ml)
   (-> time_.dummy.ml))))
