(library
 (public_name trace.util)
 (synopsis "Utilities for trace and for collectors")
 (name trace_util)
 (libraries
  trace.core
  (select
   thread_util.ml
   from
   (threads -> thread_util.real.ml)
   (-> thread_util.dummy.ml))
  (select
   time_util.ml
   from
   (mtime mtime.clock.os -> time_util.mtime.ml)
   (mtime mtime.clock.jsoo -> time_util.mtime.ml)
   (unix -> time_util.unix.ml)
   (-> time_util.dummy.ml))
  (select
   domain_util.ml
   from
   (base-domain -> domain_util.real.ml)
   (-> domain_util.dummy.ml))))
